--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "bitter-font": "^0.0.1",
     "boolean": "3.0.0",
     "bootstrap": "4.4.1",
+    "bootstrap-switch": "^3.4.0",
     "captain-hook": "^0.0.3",
     "consolidate": "^0.15.1",
     "custom-fonts-in-emails": "^4.0.1",
@@ -84,14 +85,17 @@
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.3.1",
     "nodemailer-base64-to-s3": "^3.0.1",
+    "otplib": "^11.0.1",
     "p-series": "^2.1.0",
     "parse-logs": "^0.0.21",
     "passport-local-mongoose": "^5.0.1",
+    "passport-otp-strategy": "^1.0.1",
     "pino": "^5.14.0",
     "pluralize": "^8.0.0",
     "popper.js": "^1.16.0",
     "prepare-stack-trace": "^0.0.4",
     "pug": "^2.0.4",
+    "qrcode": "^1.4.4",
     "qs": "^6.9.1",
     "randomstring-extended": "^1.0.0",
     "sanitize-html": "^1.20.1",
