chore: sync upstream

--- a/.env.defaults
+++ b/.env.defaults
@@ -30,7 +30,7 @@ WEB_SSL_CA_PATH=
 ################
 API_HOST=localhost
 API_PORT=4000
-API_PROTOCOL=http
+API_PROTOCOL={{HTTP_PROTOCOL}}
 API_URL={{API_PROTOCOL}}://{{API_HOST}}:{{API_PORT}}
 API_SSL_KEY_PATH=
 API_SSL_CERT_PATH=
@@ -151,6 +151,17 @@ CERTBOT_WELL_KNOWN_CONTENTS=
 ######################
 VERIFICATION_PIN_TIMEOUT_MS=5m
 VERIFICATION_PIN_EMAIL_INTERVAL_MS=1m
+
+#################
+## reset token ##
+#################
+RESET_TOKEN_TIMEOUT_MS=30m
+
+########################
+## change email token ##
+########################
+CHANGE_EMAIL_TOKEN_TIMEOUT_MS=30m
+CHANGE_EMAIL_LIMIT_MS=30m
 
 #################
 ## api secrets ##
