--- a/.env.schema
+++ b/.env.schema
@@ -34,6 +34,7 @@ API_PROTOCOL=
 API_URL=
 API_SSL_KEY_PATH=
 API_SSL_CERT_PATH=
+API_SSL_CA_PATH=
 API_RATELIMIT_WHITELIST=
 
 #########
@@ -150,6 +151,17 @@ CERTBOT_WELL_KNOWN_CONTENTS=
 ######################
 VERIFICATION_PIN_TIMEOUT_MS=
 VERIFICATION_PIN_EMAIL_INTERVAL_MS=
+
+#################
+## reset token ##
+#################
+RESET_TOKEN_TIMEOUT_MS=
+
+########################
+## change email token ##
+########################
+CHANGE_EMAIL_TOKEN_TIMEOUT_MS=
+CHANGE_EMAIL_LIMIT_MS=
 
 #################
 ## api secrets ##
